--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Flamengo/CSS/titulos.css">
-  <link rel="shortcut icon" href="/Flamengo/Imagens/Taça-logo.png">
-  <title>Flamengo</title>
+  <link rel="stylesheet" href="/CSS/titulos.css">
+  <link rel="shortcut icon" href="Imagens/Taca-logo.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <title>Clubes - Flamengo</title>
 </head>
 <body>
   <div class="conteiner">
-    <header class="contentHeader">
+    <header class="headerContent">
       <div class="headerLogoTitle">
-        <img src="/Flamengo/Imagens/Taça-logo.png" alt="" class="contentHeaderImg">
+        <img src="/Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
         <p>Brasileirão Assaí 2023</p>
       </div>
-      <button class="buttonHeader">Incio</button>
-      <button class="buttonHeader">Login</button>
+      <div class="headerContentButton">
+        <button class="buttonHeader">Incio</button>
+        <button class="buttonHeader">Login</button>
+      </div>
     </header>
+    <p class="navTitle">Clubes</p>
+    <div class="clubDescription">
+      <img src="/Imagens/flamengo-logo.png" alt="Flamengo" class="clubDescriptionImg">
+      <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
+      <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
+    </div>
     <section class="mainContent">
       <div class="cardPrincipal">
         <div class="cardPrincipalContent">
-          <img src="" alt="" class="">
-          <p></p>
+
         </div>
       </div>
       <div class="sideBar">
         <div class="sideBarContent">
-          <img src="" alt="" class="">
-          <p></p>
+          <img src="/Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
+          <p>Titulos</p> 
+        </div>
+        <div class="sideBarContent">
+          <img src="/Imagens/zico.webp" alt="zico" class="sideBarImg">
+          <p>Maior Idolo</p> 
+        </div>
+        <div class="sideBarContent">
+          <img src="/Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
+          <p>Artilharia</p> 
+        </div>
+        <div class="sideBarContent">
+          <img src="/Imagens/estadio.jfif" alt="estadio da gavea" class="sideBarImg">
+          <p>Estadios</p> 
         </div>
       </div>
     </section>
-    <footer>
-
+    <footer class="footerContent">
+      <div class="footerLogoTitle">
+        <img src="/Imagens/Taca-logo.png" alt="Brasileirão" class="footerContentImg">
+        <p>Brasileirão Assaí 2023</p>
+      </div>
+      <div class="footerContentButton">
+        <button class="buttonFooter">Incio</button>
+        <button class="buttonFooter">Login</button>
+      </div>
     </footer>
   </div>
 </body>
-</html>
+</html> 
