--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="conteiner">
     <header class="headerContent">
       <div class="headerLogoTitle">
-        <img src="/Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
+        <img src="Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
         <p>Brasileirão Assaí 2023</p>
       </div>
       <div class="headerContentButton">
