--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/CSS/titulos.css">
-  <link rel="shortcut icon" href="Imagens/Taca-logo.png">
+  <link rel="shortcut icon" href="/Imagens/Taca-logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <title>Clubes - Flamengo</title>
+  <title>Titulos - Flamengo</title>
 </head>
 <body>
   <div class="conteiner">
@@ -23,23 +23,87 @@
         <button class="buttonHeader">Login</button>
       </div>
     </header>
-    <p class="navTitle">Clubes</p>
+    <p class="navTitle">Clube</p>
     <div class="clubDescription">
       <img src="/Imagens/flamengo-logo.png" alt="Flamengo" class="clubDescriptionImg">
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
       <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
     </div>
+    <p class="clubDescriptionContentTitle">Titulos do Clube</p>
     <section class="mainContent">
       <div class="cardPrincipal">
         <div class="cardPrincipalContent">
-
+          
+          <p class="cardPrincipaltitle">Titulos Oficiais - 60</p>
+          <div class="cardPrincipalDescription">
+            <p>Mundial de Clubes - 1 titulo</p>
+            <ul>
+              <li>1981</li>
+            </ul>
+            <hr>
+            <p>Copa Libertadores da América - 3 titulos</p>
+            <ul>
+              <li>1981</li>
+              <li>2019</li>
+              <li>2022</li>
+            </ul>
+            <p>Campeonato Brasileiro - 8 titulos</p>
+            <ul>
+              <li>1980</li>
+              <li>1982</li>
+              <li>1983</li>
+              <li>1987</li>
+              <li>1992</li>
+              <li>2009</li>
+              <li>2019</li>
+              <li>2020</li>
+            </ul>
+            <p>Copa do Brasil - 4 titulos</p>
+            <ul>
+              <li>1990</li>
+              <li>2006</li>
+              <li>2013</li>
+              <li>2022</li>
+            </ul>
+            <p>Recopa Sul-Americana - 1 titulos</p>
+            <ul>
+              <li>2020</li>
+            </ul>
+            <p>Copa Mercosul - 1 titulos</p>
+            <ul>
+              <li>1999</li>
+            </ul>
+            <p>Copa de Ouro Nicolás Leoz - 1 titulos</p>
+            <ul>
+              <li>1996</li>
+            </ul>
+            <p>Supercopa do Brasil - 2 titulos</p>
+            <ul>
+              <li>2020</li>
+              <li>2021</li>
+            </ul>
+            <p>Copa dos Campeões - 1 titulos</p>
+            <ul>
+              <li>2001</li>
+            </ul>
+            <p>Torneio Rio-São Paulo - 1 titulos</p>
+            <ul>
+              <li>1961</li>
+            </ul>
+            <p>Taça dos Campeões Rio-São Paulo - 1 titulos</p>
+            <ul>
+              <li>1955</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="sideBar">
-        <div class="sideBarContent">
-          <img src="/Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
-          <p>Titulos</p> 
-        </div>
+        <a href="/index.html">
+          <div class="sideBarContent">
+            <img src="/Imagens/1914-Flamengo.jpg" alt="titulos" class="sideBarImg">
+            <p class="sideBarContentDescription">Historia</p> 
+          </div>
+        </a>
         <div class="sideBarContent">
           <img src="/Imagens/zico.webp" alt="zico" class="sideBarImg">
           <p>Maior Idolo</p> 
