--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <div class="conteiner">
     <header class="headerContent">
-      <div class="headerLogoTitle">
-        <img src="Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
-        <p>Brasileirão Assaí 2023</p>
-      </div>
+        <div class="headerLogoTitle">
+          <img src="Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
+          <p>Brasileirão Assaí 2023</p>
+        </div>
       <div class="headerContentButton">
         <button class="buttonHeader">Incio</button>
         <button class="buttonHeader">Login</button>
@@ -29,6 +29,7 @@
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
       <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
     </div>
+    <p class="clubDescriptionContentTitle">Historia do Clube</p>
     <section class="mainContent">
       <div class="cardPrincipal">
         <div class="cardPrincipalContent">
@@ -45,10 +46,12 @@
         </div>
       </div>
       <div class="sideBar">
-        <div class="sideBarContent">
-          <img src="Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
-          <p>Titulos</p> 
-        </div>
+        <a href="Html/titulos.html">
+          <div class="sideBarContent">
+            <img src="Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
+            <p>Titulos</p> 
+          </div>
+        </a>
         <div class="sideBarContent">
           <img src="Imagens/zico.webp" alt="zico" class="sideBarImg">
           <p>Maior Idolo</p> 
