--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -99,7 +99,7 @@
       <div class="sideBar">
         <a href="/index.html">
           <div class="sideBarContent">
-            <img src="Imagens/1914-Flamengo.jpg" alt="titulos" class="sideBarImg">
+            <img src="/Imagens/1914-Flamengo.jpg" alt="titulos" class="sideBarImg">
             <p class="sideBarContentDescription">Historia</p> 
           </div>
         </a>
