--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="buttonHeader">Login</button>
       </div>
     </header>
-    <p class="navTitle">Clubes</p>
+    <p class="navTitle">Clube</p>
     <div class="clubDescription">
       <img src="Imagens/flamengo-logo.png" alt="Flamengo" class="clubDescriptionImg">
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
