--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="sideBar">
-        <a href="titulos.html">
+        <a href="/Html/titulos.html">
           <div class="sideBarContent">
             <img src="Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
             <p>Titulos</p> 
