--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -112,7 +112,7 @@
           <p>Artilharia</p> 
         </div>
         <div class="sideBarContent">
-          <img src="/Imagens/estadio.jfif" alt="estadio da gavea" class="sideBarImg">
+          <img src="/Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
           <p>Estadios</p> 
         </div>
       </div>
