--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/CSS/titulos.css">
-  <link rel="shortcut icon" href="/Imagens/Taca-logo.png">
+  <link rel="stylesheet" href="../CSS/titulos.css">
+  <link rel="shortcut icon" href="../Imagens/Taca-logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <div class="conteiner">
     <header class="headerContent">
       <div class="headerLogoTitle">
-        <img src="/Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
+        <img src="../Imagens/Taca-logo.png" alt="Brasileirão" class="headerContentImg">
         <p>Brasileirão Assaí 2023</p>
       </div>
       <div class="headerContentButton">
@@ -25,7 +25,7 @@
     </header>
     <p class="navTitle">Clube</p>
     <div class="clubDescription">
-      <img src="/Imagens/flamengo-logo.png" alt="Flamengo" class="clubDescriptionImg">
+      <img src="../Imagens/flamengo-logo.png" alt="Flamengo" class="clubDescriptionImg">
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
       <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
     </div>
@@ -97,29 +97,29 @@
         </div>
       </div>
       <div class="sideBar">
-        <a href="/index.html">
+        <a href="../index.html">
           <div class="sideBarContent">
-            <img src="/Imagens/1914-Flamengo.jpg" alt="titulos" class="sideBarImg">
+            <img src="../Imagens/1914-Flamengo.jpg" alt="titulos" class="sideBarImg">
             <p class="sideBarContentDescription">Historia</p> 
           </div>
         </a>
         <div class="sideBarContent">
-          <img src="/Imagens/zico.webp" alt="zico" class="sideBarImg">
+          <img src="../Imagens/zico.webp" alt="zico" class="sideBarImg">
           <p>Maior Idolo</p> 
         </div>
         <div class="sideBarContent">
-          <img src="/Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
+          <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
           <p>Artilharia</p> 
         </div>
         <div class="sideBarContent">
-          <img src="/Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
+          <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
           <p>Estadios</p> 
         </div>
       </div>
     </section>
     <footer class="footerContent">
       <div class="footerLogoTitle">
-        <img src="/Imagens/Taca-logo.png" alt="Brasileirão" class="footerContentImg">
+        <img src="../Imagens/Taca-logo.png" alt="Brasileirão" class="footerContentImg">
         <p>Brasileirão Assaí 2023</p>
       </div>
       <div class="footerContentButton">
