--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -103,10 +103,12 @@
             <p class="sideBarContentDescription">Historia</p> 
           </div>
         </a>
-        <div class="sideBarContent">
-          <img src="../Imagens/zico.webp" alt="zico" class="sideBarImg">
-          <p>Maior Idolo</p> 
-        </div>
+        <a href="zico.html">
+          <div class="sideBarContent">
+            <img src="../Imagens/zico.webp" alt="zico" class="sideBarImg">
+            <p>Maior Idolo</p> 
+          </div>
+        </a>
         <div class="sideBarContent">
           <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
           <p>Artilharia</p> 
