--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             <p>Titulos</p> 
           </div>
         </a>
-        <div class="sideBarContent">
-          <img src="Imagens/zico.webp" alt="zico" class="sideBarImg">
-          <p>Maior Idolo</p> 
-        </div>
+        <a href="Html/zico.html">
+          <div class="sideBarContent">
+            <img src="Imagens/zico.webp" alt="zico" class="sideBarImg">
+            <p>Maior Idolo</p> 
+          </div>
+        </a>
         <div class="sideBarContent">
           <img src="Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
           <p>Artilharia</p> 
