--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
             <p>Maior Idolo</p> 
           </div>
         </a>
+        <a href="Html/Artilharia.html">
         <div class="sideBarContent">
           <img src="Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
           <p>Artilharia</p> 
-        </div>
+          </div>
+        </a>
         <div class="sideBarContent">
           <img src="Imagens/estadio.jfif" alt="estadio da gavea" class="sideBarImg">
           <p>Estadios</p> 
