--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -109,10 +109,12 @@
             <p>Maior Idolo</p> 
           </div>
         </a>
-        <div class="sideBarContent">
-          <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
-          <p>Artilharia</p> 
-        </div>
+        <a href="Artilharia.html">
+          <div class="sideBarContent">
+            <img src="Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
+            <p>Artilharia</p> 
+            </div>
+          </a>
         <div class="sideBarContent">
           <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
           <p>Estadios</p> 
