--- a/Html/zico.html
+++ b/Html/zico.html
@@ -62,10 +62,12 @@
             <p>Titulos</p> 
           </div>
         </a>
+        <a href="Artilharia.html">
         <div class="sideBarContent">
           <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
           <p>Artilharia</p> 
         </div>
+        </a>
         <div class="sideBarContent">
           <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
           <p>Estadios</p> 
