--- a/Html/titulos.html
+++ b/Html/titulos.html
@@ -111,7 +111,7 @@
         </a>
         <a href="Artilharia.html">
           <div class="sideBarContent">
-            <img src="Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
+            <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
             <p>Artilharia</p> 
             </div>
           </a>
