--- a/Html/Artilharia.html
+++ b/Html/Artilharia.html
@@ -97,10 +97,12 @@
             <p>Titulos</p> 
           </div>
         </a>
-        <div class="sideBarContent">
-          <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
-          <p class="sideBarContentDescription">Estadios</p> 
-        </div>
+        <a href="estadios.html">
+          <div class="sideBarContent">
+            <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
+            <p>Estadios</p> 
+          </div>
+        </a>
       </div>
     </section>
     <footer class="footerContent">
