--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
           <p>Artilharia</p> 
           </div>
         </a>
-        <div class="sideBarContent">
-          <img src="Imagens/estadio.jfif" alt="estadio da gavea" class="sideBarImg">
-          <p>Estadios</p> 
-        </div>
+        <a href="Html/estadios.html">
+          <div class="sideBarContent">
+            <img src="Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
+            <p>Estadios</p> 
+          </div>
+        </a>
       </div>
     </section>
     <footer class="footerContent">
