--- a/Html/estadios.html
+++ b/Html/estadios.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../CSS/titulos.css">
+  <link rel="stylesheet" href="../CSS/estadios.css">
   <link rel="shortcut icon" href="../Imagens/Taca-logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,71 +29,21 @@
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
       <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
     </div>
-    <p class="clubDescriptionContentTitle">Titulos do Clube</p>
+    <p class="clubDescriptionContentTitle">Artilharia</p>
     <section class="mainContent">
       <div class="cardPrincipal">
-        <div class="cardPrincipalContent">
-          
-          <p class="cardPrincipaltitle">Titulos Oficiais - 60</p>
-          <div class="cardPrincipalDescription">
-            <p>Mundial de Clubes - 1 titulo</p>
-            <ul>
-              <li>1981</li>
-            </ul>
-            <p>Copa Libertadores da América - 3 titulos</p>
-            <ul>
-              <li>1981</li>
-              <li>2019</li>
-              <li>2022</li>
-            </ul>
-            <p>Campeonato Brasileiro - 8 titulos</p>
-            <ul>
-              <li>1980</li>
-              <li>1982</li>
-              <li>1983</li>
-              <li>1987</li>
-              <li>1992</li>
-              <li>2009</li>
-              <li>2019</li>
-              <li>2020</li>
-            </ul>
-            <p>Copa do Brasil - 4 titulos</p>
-            <ul>
-              <li>1990</li>
-              <li>2006</li>
-              <li>2013</li>
-              <li>2022</li>
-            </ul>
-            <p>Recopa Sul-Americana - 1 titulos</p>
-            <ul>
-              <li>2020</li>
-            </ul>
-            <p>Copa Mercosul - 1 titulos</p>
-            <ul>
-              <li>1999</li>
-            </ul>
-            <p>Copa de Ouro Nicolás Leoz - 1 titulos</p>
-            <ul>
-              <li>1996</li>
-            </ul>
-            <p>Supercopa do Brasil - 2 titulos</p>
-            <ul>
-              <li>2020</li>
-              <li>2021</li>
-            </ul>
-            <p>Copa dos Campeões - 1 titulos</p>
-            <ul>
-              <li>2001</li>
-            </ul>
-            <p>Torneio Rio-São Paulo - 1 titulos</p>
-            <ul>
-              <li>1961</li>
-            </ul>
-            <p>Taça dos Campeões Rio-São Paulo - 1 titulos</p>
-            <ul>
-              <li>1955</li>
-            </ul>
-          </div>
+        <div class="cardPrincipalContent"> 
+          <p class="cardPrincipaltitle">Maiores Artilheiros - Top 10</p>
+          <ul class="cardPrincipalDescription">
+            <div class="cardPrincipalIndividual">
+              <li class="cardPrincipalList">Gavea</li>
+            <img src="../Imagens/gavea.jpg" alt="Gavea" class="cardPrincipalImg">
+            </div>
+            <div class="cardPrincipalIndividual">
+              <li class="cardPrincipalList">Maracanã (administrado em conjunto com o Fluminense)</li>
+              <img src="../Imagens/marcana.jpg" alt="Dida" class="cardPrincipalImg">
+            </div>
+          </ul>
         </div>
       </div>
       <div class="sideBar">
@@ -106,20 +56,20 @@
         <a href="zico.html">
           <div class="sideBarContent">
             <img src="../Imagens/zico.webp" alt="zico" class="sideBarImg">
-            <p>Maior Idolo</p> 
+            <p class="sideBarContentDescription">Maior Idolo</p> 
+          </div>
+        </a>
+        <a href="titulos.html">
+          <div class="sideBarContent">
+            <img src="../Imagens/titulos.jpg_large" alt="titulos" class="sideBarImg">
+            <p>Titulos</p> 
           </div>
         </a>
         <a href="Artilharia.html">
           <div class="sideBarContent">
             <img src="../Imagens/artilharia.jfif" alt="gabigol" class="sideBarImg">
             <p>Artilharia</p> 
-            </div>
-          </a>
-          <a href="estadios.html">
-            <div class="sideBarContent">
-              <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
-              <p>Estadios</p> 
-            </div>
+          </div>
           </a>
       </div>
     </section>
