--- a/Html/zico.html
+++ b/Html/zico.html
@@ -68,10 +68,12 @@
           <p>Artilharia</p> 
         </div>
         </a>
-        <div class="sideBarContent">
-          <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
-          <p>Estadios</p> 
-        </div>
+        <a href="estadios.html">
+          <div class="sideBarContent">
+            <img src="../Imagens/estadio.jfif" alt="estadio da gavea12" class="sideBarImg">
+            <p>Estadios</p> 
+          </div>
+        </a>
       </div>
     </section>
     <footer class="footerContent">
