--- a/Html/estadios.html
+++ b/Html/estadios.html
@@ -29,11 +29,11 @@
       <p class="clubDescriptionContent">Clube de Regatas do Flamengo</p>
       <p class="clubDescriptionContent">Rio de Janeiro-RJ</p>
     </div>
-    <p class="clubDescriptionContentTitle">Artilharia</p>
+    <p class="clubDescriptionContentTitle">Estadios</p>
     <section class="mainContent">
       <div class="cardPrincipal">
         <div class="cardPrincipalContent"> 
-          <p class="cardPrincipaltitle">Maiores Artilheiros - Top 10</p>
+          <p class="cardPrincipaltitle">Estadios Usados</p>
           <ul class="cardPrincipalDescription">
             <div class="cardPrincipalIndividual">
               <li class="cardPrincipalList">Gavea</li>
